feat: integrate image upload via MinIO, support file attachments in chat, and restructure DTOs and services