@@ -5,27 +5,33 @@ import com.nutrilens.nutrilens_backend.common.dto.ai.AiChatResponse;
 import com.nutrilens.nutrilens_backend.common.dto.chat.ChatRequestDTO;
 import com.nutrilens.nutrilens_backend.common.dto.chat.ChatResponseDTO;
 import com.nutrilens.nutrilens_backend.common.entity.Conversation;
+import com.nutrilens.nutrilens_backend.common.entity.Image;
 import com.nutrilens.nutrilens_backend.common.entity.Message;
 import com.nutrilens.nutrilens_backend.common.entity.User;
 import com.nutrilens.nutrilens_backend.repository.ConversationRepository;
+import com.nutrilens.nutrilens_backend.repository.ImageRepository;
 import com.nutrilens.nutrilens_backend.repository.MessageRepository;
 import com.nutrilens.nutrilens_backend.repository.UserRepository;
 import com.nutrilens.nutrilens_backend.service.AiGatewayService;
 import com.nutrilens.nutrilens_backend.service.ChatService;
 import com.nutrilens.nutrilens_backend.service.ChatTitleService;
+import com.nutrilens.nutrilens_backend.service.MinioService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor // Sử dụng @RequiredArgsConstructor cho clean code, tự tạo constructor
+@RequiredArgsConstructor
 public class ChatServiceImpl implements ChatService {
 
     private final UserRepository userRepository;
@@ -33,78 +39,80 @@ public class ChatServiceImpl implements ChatService {
     private final MessageRepository messageRepository;
     private final ChatTitleService chatTitleService;
     private final AiGatewayService aiGatewayService;
+    private final MinioService minioService;
+    private final ImageRepository imageRepository;
 
     @Override
     @Transactional
-    public ChatResponseDTO getChatReply(ChatRequestDTO requestDTO) {
-        Conversation conversation = findOrCreateConversation(requestDTO);
+    public ChatResponseDTO processChat(UUID userId, UUID conversationId, String messageContent, MultipartFile imageFile) {
+        Conversation conversation = findOrCreateConversation(userId, conversationId);
 
-        User user = conversation.getUser();
+        String imageIdStr = null;
+        if (imageFile != null && !imageFile.isEmpty()) {
+            log.info("Processing image upload...");
+            String fileName = minioService.uploadImage(imageFile);
 
-        String reply;
+            Image image = new Image();
+            image.setUserId(conversation.getUser().getId());
+            image.setBucket(minioService.getBucketName());
+            image.setFileName(fileName);
+            image.setUploadTime(LocalDateTime.now());
 
-        // ======================== PHẦN GỌI AI THẬT (ĐÃ COMMENT) ========================
-        /*
+            image = imageRepository.save(image);
+            imageIdStr = image.getId().toString();
+            log.info("Image saved with ID: {}", imageIdStr);
+        }
         List<Message> previousMessages = messageRepository.findByConversation_IdOrderByTimestampAsc(conversation.getId());
 
         List<AiChatRequest.PreviousMessage> history = previousMessages.stream()
                 .map(msg -> new AiChatRequest.PreviousMessage(msg.getRole(), msg.getContent()))
-                .collect(Collectors.toList());
+                .toList();
 
-        AiChatRequest aiRequest = new AiChatRequest(
-            user != null ? user.getId() : null, // Gửi userId nếu có
-            requestDTO.getMessage(),
-            history
-        );
+        AiChatRequest aiRequest = AiChatRequest.builder()
+                .userId(conversation.getUser().getId().toString())
+                .message(messageContent)
+                .image(imageIdStr)
+                .history(history)
+                .build();
 
-        log.info("Sending request to AI Gateway for conversationId: {}", conversation.getId());
+        log.info("Calling AI Agent...");
         AiChatResponse aiResponse = aiGatewayService.getChatReplyFromAgent(aiRequest);
-        reply = aiResponse.getReply();
-        */
-        // ==============================================================================
+        String replyContent = aiResponse.getReply();
 
+        saveMessage(conversation, "user", messageContent, imageFile != null ? imageRepository.findById(UUID.fromString(Objects.requireNonNull(imageIdStr))).orElse(null) : null);
+        saveMessage(conversation, "assistant", replyContent, null);
 
-        // ======================= PHẦN MOCK DATA (ĐANG HOẠT ĐỘNG) =======================
-        reply = generateMockReply(requestDTO.getMessage());
+        if (conversation.getChatName().equals("New Chat")) {
+            chatTitleService.generateTitleAsync(conversation, messageContent);
+        }
 
-        saveMessage(conversation, "user", requestDTO.getMessage());
-        saveMessage(conversation, "assistant", reply);
-        log.info("Saved messages for conversationId: {}", conversation.getId());
+        return new ChatResponseDTO(conversation.getId(), replyContent, conversation.getChatName());
 
-
-        // Bước 6: Trả về response cho Frontend.
-        return new ChatResponseDTO(conversation.getId(), reply, conversation.getChatName());
     }
 
 
-    private Conversation findOrCreateConversation(ChatRequestDTO requestDTO) {
-        if (requestDTO.getConversationId() != null) {
-            log.info("Continuing conversation with id: {}", requestDTO.getConversationId());
-            return conversationRepository.findById(requestDTO.getConversationId())
-                    .orElseThrow(() -> new RuntimeException("Conversation not found: " + requestDTO.getConversationId()));
+    private Conversation findOrCreateConversation(UUID userId, UUID conversationId) {
+        if (conversationId != null) {
+            return conversationRepository.findById(conversationId)
+                    .orElseThrow(() -> new RuntimeException("Conversation not found"));
         }
-
-        log.info("Starting a new conversation.");
-        Conversation.ConversationBuilder newConversationBuilder = Conversation.builder()
-                .chatName("New Chat");
-
-        if (requestDTO.getUserId() != null) {
-            User user = userRepository.findById(requestDTO.getUserId())
-                    .orElseThrow(() -> new RuntimeException("User not found: " + requestDTO.getUserId()));
-            newConversationBuilder.user(user);
-            log.info("New conversation for logged-in user: {}", requestDTO.getUserId());
-        } else {
-            log.info("New conversation for an anonymous user.");
+        // New Chat
+        Conversation.ConversationBuilder builder = Conversation.builder().chatName("New Chat");
+        if (userId != null) {
+            User user = userRepository.findById(userId)
+                    .orElseThrow(() -> new RuntimeException("User not found"));
+            builder.user(user);
         }
-
-        return conversationRepository.save(newConversationBuilder.build());
+        return conversationRepository.save(builder.build());
     }
 
-    private void saveMessage(Conversation conversation, String role, String content) {
+
+    private void saveMessage(Conversation conversation, String role, String content, Image image) {
         Message message = Message.builder()
                 .conversation(conversation)
                 .role(role)
                 .content(content)
+                .image(image)
                 .build();
         messageRepository.save(message);
     }
